k8s/sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: smart-home-app
        image: ghcr.io/upayanmazumder/smart-home-system/app:latest
        ports:
        - containerPort: 3000
