k8s/sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: default
spec:
  selector:
    app: demo-app
  ports:
  - protocol: TCP
    port: 80      # External Port (used by Ingress)
    targetPort: 3000 # Port inside the container
